--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "577d4096",
+   "id": "c09a1485",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "803b4788",
+   "id": "9d337c83",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23c76da",
+   "id": "07c0f7ea",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73674c45",
+   "id": "8c49869c",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d792bfb9",
+   "id": "0f9f4570",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34a435ec",
+   "id": "1eb7cd89",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fd46139c",
+   "id": "22379c17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:34.161767Z",
-     "iopub.status.busy": "2025-01-30T11:08:34.161345Z",
-     "iopub.status.idle": "2025-01-30T11:08:37.288216Z",
-     "shell.execute_reply": "2025-01-30T11:08:37.287662Z"
+     "iopub.execute_input": "2025-01-30T11:44:37.452829Z",
+     "iopub.status.busy": "2025-01-30T11:44:37.452651Z",
+     "iopub.status.idle": "2025-01-30T11:44:40.547072Z",
+     "shell.execute_reply": "2025-01-30T11:44:40.546552Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc55843b",
+   "id": "04e8e67a",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6b33c9",
+   "id": "dfee2cc4",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1bdbc1d",
+   "id": "7d66dc02",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6727939",
+   "id": "6e596c95",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef6fef1d",
+   "id": "75999aa7",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06e2a6e",
+   "id": "e3059ada",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa744ef",
+   "id": "0444e30a",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6090dcc",
+   "id": "86b32033",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3af95b47",
+   "id": "5f211f29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:37.290385Z",
-     "iopub.status.busy": "2025-01-30T11:08:37.290120Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.380891Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.380358Z"
+     "iopub.execute_input": "2025-01-30T11:44:40.549141Z",
+     "iopub.status.busy": "2025-01-30T11:44:40.548884Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.437485Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.436921Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb51d40f",
+   "id": "b1f46699",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89fee948",
+   "id": "054db495",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.382992Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.382614Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.385954Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.385407Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.439735Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.439228Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.442815Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.442262Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b7e975",
+   "id": "5e241bf4",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36863581",
+   "id": "80255bef",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2559673",
+   "id": "cf5734e6",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e6ebc5",
+   "id": "c6b39593",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d6509045",
+   "id": "894a2188",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.387883Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.387543Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.432198Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.431626Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.444914Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.444383Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.487845Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.487257Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe1fb2e",
+   "id": "2fb9716d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5bfb261e",
+   "id": "dc73b380",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.434222Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.433839Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.504165Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.503505Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.489768Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.489409Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.559213Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.558627Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0578ec5",
+   "id": "f992202b",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02b8edcf",
+   "id": "ee28d0a9",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c7147873",
+   "id": "118c62df",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.506176Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.505966Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.535940Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.535438Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.561218Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.560797Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.587367Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.586874Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559c5b55",
+   "id": "d2ce09b8",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a5254c1",
+   "id": "9c95d3ec",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c85e9ef6",
+   "id": "79a045c4",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac388bb2",
+   "id": "792e30e6",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b036a85",
+   "id": "eca3deca",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e4f444c9",
+   "id": "2933c216",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.538081Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.537710Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.541968Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.541355Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.589190Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.589008Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.593173Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.592543Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a43254c",
+   "id": "92266b08",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5d70f25",
+   "id": "ca506d25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.543922Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.543596Z",
-     "iopub.status.idle": "2025-01-30T11:08:39.546519Z",
-     "shell.execute_reply": "2025-01-30T11:08:39.546052Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.594727Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.594537Z",
+     "iopub.status.idle": "2025-01-30T11:44:42.597410Z",
+     "shell.execute_reply": "2025-01-30T11:44:42.596857Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a1d305",
+   "id": "b04b6bd6",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "41d99aca",
+   "id": "08af3cc8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:39.548249Z",
-     "iopub.status.busy": "2025-01-30T11:08:39.547897Z",
-     "iopub.status.idle": "2025-01-30T11:08:42.106865Z",
-     "shell.execute_reply": "2025-01-30T11:08:42.106327Z"
+     "iopub.execute_input": "2025-01-30T11:44:42.599195Z",
+     "iopub.status.busy": "2025-01-30T11:44:42.598879Z",
+     "iopub.status.idle": "2025-01-30T11:44:45.167317Z",
+     "shell.execute_reply": "2025-01-30T11:44:45.166766Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ab9aff5",
+   "id": "fe390d2b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d98a981",
+   "id": "eae2e4e8",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b761365",
+   "id": "37ae2d78",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67cd0f8a",
+   "id": "4528f593",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8bf3c557",
+   "id": "31618bb6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:42.109091Z",
-     "iopub.status.busy": "2025-01-30T11:08:42.108734Z",
-     "iopub.status.idle": "2025-01-30T11:08:42.112313Z",
-     "shell.execute_reply": "2025-01-30T11:08:42.111718Z"
+     "iopub.execute_input": "2025-01-30T11:44:45.169378Z",
+     "iopub.status.busy": "2025-01-30T11:44:45.169010Z",
+     "iopub.status.idle": "2025-01-30T11:44:45.172278Z",
+     "shell.execute_reply": "2025-01-30T11:44:45.171703Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f00e0247ec0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fd03aecfa60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55d22b5",
+   "id": "2587b984",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ec33d46",
+   "id": "753ae78a",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d2944f",
+   "id": "cbef9700",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "022de967",
+   "id": "9d4cd3fe",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "34d3b36c",
+   "id": "f375caeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:42.114352Z",
-     "iopub.status.busy": "2025-01-30T11:08:42.114013Z",
-     "iopub.status.idle": "2025-01-30T11:08:42.117153Z",
-     "shell.execute_reply": "2025-01-30T11:08:42.116501Z"
+     "iopub.execute_input": "2025-01-30T11:44:45.174109Z",
+     "iopub.status.busy": "2025-01-30T11:44:45.173768Z",
+     "iopub.status.idle": "2025-01-30T11:44:45.176890Z",
+     "shell.execute_reply": "2025-01-30T11:44:45.176329Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e87a610d",
+   "id": "3fd0d024",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:08:42.118937Z",
-     "iopub.status.busy": "2025-01-30T11:08:42.118593Z",
-     "iopub.status.idle": "2025-01-30T11:08:43.189500Z",
-     "shell.execute_reply": "2025-01-30T11:08:43.188900Z"
+     "iopub.execute_input": "2025-01-30T11:44:45.178677Z",
+     "iopub.status.busy": "2025-01-30T11:44:45.178325Z",
+     "iopub.status.idle": "2025-01-30T11:44:46.230109Z",
+     "shell.execute_reply": "2025-01-30T11:44:46.229535Z"
     }
    },
    "outputs": [
